--- a/app/style.css
+++ b/app/style.css
@@ -734,3 +734,11 @@ span.features {
   justify-content: center;
   align-items: center;
 }
+
+a:hover {
+  opacity: .7;
+}
+
+a:active {
+  opacity: .5;
+}
